--- a/templates/newsportal/nav.html
+++ b/templates/newsportal/nav.html
@@ -27,18 +27,14 @@
                    data-bs-toggle="dropdown"
                    aria-expanded="false">Categories</a>
                 <ul class="dropdown-menu">
-                  <li>
-                    <a class="dropdown-item" href="category.html">Politics</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="category.html">Sports</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="category.html">Technology</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="category.html">Entertainment</a>
-                  </li>
+                  {% for category in category  %}
+                   <li>
+                    <a class="dropdown-item" href="{% url 'post-by-category' category.id %}">{{ category.name|title }}</a>
+                    </li>
+                  {% endfor %}
+             
+                  
+                 
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
